Transform, not fit_transform on scaling of test dataset.  Improve model comparison and conclusion

--- a/Notebooks/Capstone 2 -- Exploratory Data Analysis.ipynb
+++ b/Notebooks/Capstone 2 -- Exploratory Data Analysis.ipynb
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ChestPain is an inverted ordinal, as we saw in Data Wrangling.  4 indicates no pain at rest.  It seems counterintuitive that those with no resting chest pain complain of pain during the stress test the most, but that's what the data say.  "
+    "ChestPain is a categorical with an inverted trend, as we saw in Data Wrangling.  4 indicates no pain at rest.  It seems counterintuitive that those with no resting chest pain complain of pain during the stress test the most, but that's what these data say.  "
    ]
   },
   {
