--- a/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
+++ b/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4       1        2         0        2         1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,14 +232,14 @@
     "\n",
     "### Best Candidate Features from EDA\n",
     "\n",
-    "1. Chest Pain (ordinal: monotonically negative AngioTgt trend 1-3, drop off at 4)\n",
+    "1. Chest Pain (categorical: monotonically negative AngioTgt trend 1-3, drop off at 4)\n",
     "2. ST Pain    (binary:  negative correlation to AngioTgt) \n",
     "        Correlated with ChestPain(+.45)\n",
-    "3. ST Wave    (ordinal: monotonically negative trend 0-6, moderating elbow at 3, no 5s) \n",
+    "3. ST Wave    (categorical: monotonically negative trend 0-6, moderating elbow at 3, no 5s) \n",
     "        Correlated with ChestPain(+.33)\n",
     "4. ST Max Rate (numerical: mostly positive correlation to AngioTgt)  \n",
     "        Correlated with STPain (-.38) and ChestPain (-.38) and STWave (-.33)\n",
-    "5. Num Color  (categorical: monotonically negative trend 0-3, 4 jumps up to 80%)\n",
+    "5. Num Color  (ordinal: monotonically negative trend 0-3, 4 jumps up to 80%)\n",
     "6. ST Slope   (3 categories: 0 just above 1, 1 far below 2)  \n",
     "        Correlated with STWave(-.55) and MaxRate(+.39)\n",
     "        \n",
@@ -262,20 +262,20 @@
     "\n",
     "### Unscaled Set\n",
     "\n",
-    "For non-distance-based algorithms, we will use them unscaled, with dummy variables for categoricals, but not ordinals that showed a trend with the target. \n",
+    "For non-distance-based algorithms, we will use them unscaled, with dummy variables for categoricals, but not ordinals or categoricals that showed a trend with the target. \n",
     "\n",
     "### Scaled Set\n",
     "\n",
-    "For distance-based algorithms, we will scale numerical and ordinal variables, in addition to dummy variables for categories.  As the standard scaling reduces numericals down to the +/- 2.5 range, with very few 3 sigmas as expected, we'll scale any ordinals down to roughly the same magnitude, 0 to 5 or +/- 3.  Any ordinals that already have a variation less than 5 will be left alone.\n",
+    "For distance-based algorithms, we will scale numerical variables, in addition to making dummy variables for categories that don't show a target trend.  As the standard scaling reduces numericals down to the +/- 2.5 range, with very few 3 sigmas as expected, we'll make sure any categoricals are within the same magnitude, 0 to 5 or +/- 3.  Any categoricals that already have a variation less than 5 will be left alone.\n",
     "\n",
     "\n",
     "## 2C. Encoding Categorical Features with Dummy Variables\n",
     "\n",
-    "* ChestPain is Ordinal. (AngioTgt trends with values.)  Use the 4 values, 1-4 directly.  This is less than 5, so no scaling.\n",
+    "* ChestPain is trending. (AngioTgt trends with values.)  Use the 4 values, 1-4 directly.  This is less than 5, so no scaling.\n",
     "* STPain is already a binary. (1 = Yes)\n",
-    "* STWave is ordinal after Data Wrangling it down to 6 bins.  Bin 5 is empty. Move 6 to 5.  Use 0-5 directly, no scaling.\n",
+    "* STWave is trending after Data Wrangling it down to 6 bins.  Bin 5 is empty. Move 6 to 5.  Use 0-5 directly, no scaling.\n",
     "* STMaxRate is numerical with most values between 80 and 200 and mode at 160.  Standardize it AFTER splitting test and train data sets!\n",
-    "* NumColor is Ordinal. Documentation defined 0-3.  We see very few 4 values and they are against the trend.  Use 0-3 only as Ordinals.  Replace 4 with 0, as their mean AngioTgt scores are similar.  No scaling needed.\n",
+    "* NumColor is trending. Documentation defined 0-3.  We see very few 4 values and they are against the trend.  Use 0-3 only as categories.  Replace 4 with 0, as their mean AngioTgt scores are similar.  No scaling needed.\n",
     "* STSlope is categorical. Make dummies. Drop sparse first value (0) to avoid collinearity.  2 binary columns.\n",
     "* Defects is categorical.  Make dummies.  Drop very sparse first value (0) to avoid collinearity.  3 binary columns.\n",
     "* Sex is already a binary.  (1 = Male)\n",
@@ -284,7 +284,7 @@
     "* SystolicBP is continuous and shows little correlation to AngioTgt.  Standardize it after splitting.\n",
     "* Chol is continuous. Standardize after splitting test and train data sets.\n",
     "* Glucose is binary.  (1 = diabetes)\n",
-    "* RestECG has three values, but very few 2s. Replace 2 with 0 to make it ordinal and binary.\n"
+    "* RestECG has three values, but very few 2s. Replace 2 with 0 to make it trending and binary.\n"
    ]
   },
   {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "[303 rows x 16 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
    "source": [
     "features = heart_data.drop(columns=\"AngioTgt\")\n",
     "\n",
-    "## Replace certain ordinal values as specified above\n",
+    "## Replace certain categorical values as specified above\n",
     "features = features.replace({'NumColor':4}, 0)\n",
     "features = features.replace({'STWave':6}, 5)\n",
     "features = features.replace({'RestECG':2}, 0)\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "37           1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
        "225          1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
        "[242 rows x 16 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1436,14 +1436,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>219</th>\n",
-       "      <td>-0.707836</td>\n",
+       "      <td>-0.701898</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>-0.243657</td>\n",
-       "      <td>0.170897</td>\n",
+       "      <td>-0.054575</td>\n",
+       "      <td>0.192429</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.229641</td>\n",
+       "      <td>-0.048990</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -1455,14 +1455,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>216</th>\n",
-       "      <td>0.714498</td>\n",
+       "      <td>0.879240</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>-0.243657</td>\n",
-       "      <td>0.308582</td>\n",
+       "      <td>-0.054575</td>\n",
+       "      <td>0.327129</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1.804411</td>\n",
+       "      <td>-2.484434</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1474,14 +1474,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>259</th>\n",
-       "      <td>-1.723789</td>\n",
+       "      <td>-1.831282</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.810948</td>\n",
-       "      <td>-0.320835</td>\n",
+       "      <td>-0.628804</td>\n",
+       "      <td>-0.288643</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.457748</td>\n",
+       "      <td>1.421467</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -1493,14 +1493,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>179</th>\n",
-       "      <td>0.206522</td>\n",
+       "      <td>0.314547</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.890927</td>\n",
-       "      <td>0.564283</td>\n",
+       "      <td>1.093882</td>\n",
+       "      <td>0.577286</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.228736</td>\n",
+       "      <td>-1.795157</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1512,14 +1512,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>225</th>\n",
-       "      <td>1.527260</td>\n",
+       "      <td>1.782747</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.607281</td>\n",
-       "      <td>-1.441985</td>\n",
+       "      <td>0.806768</td>\n",
+       "      <td>-1.385486</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.729818</td>\n",
+       "      <td>-1.197784</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -1550,14 +1550,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>-1.622194</td>\n",
+       "      <td>-1.718344</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.323635</td>\n",
-       "      <td>1.449402</td>\n",
+       "      <td>0.519653</td>\n",
+       "      <td>1.443214</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.457748</td>\n",
+       "      <td>1.421467</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1569,14 +1569,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>129</th>\n",
-       "      <td>1.933642</td>\n",
+       "      <td>2.234500</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.810948</td>\n",
-       "      <td>0.426598</td>\n",
+       "      <td>-0.628804</td>\n",
+       "      <td>0.442586</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.883331</td>\n",
+       "      <td>-1.381591</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1588,14 +1588,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>272</th>\n",
-       "      <td>1.222475</td>\n",
+       "      <td>1.443932</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>-0.810948</td>\n",
-       "      <td>-0.202819</td>\n",
+       "      <td>-0.628804</td>\n",
+       "      <td>-0.173186</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-2.802248</td>\n",
+       "      <td>-3.679180</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1607,14 +1607,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.206522</td>\n",
+       "      <td>0.314547</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.890927</td>\n",
-       "      <td>-1.560001</td>\n",
+       "      <td>1.093882</td>\n",
+       "      <td>-1.500943</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.150721</td>\n",
+       "      <td>1.053853</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -1626,14 +1626,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>290</th>\n",
-       "      <td>0.612903</td>\n",
+       "      <td>0.766301</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.777469</td>\n",
-       "      <td>-0.871576</td>\n",
+       "      <td>0.979037</td>\n",
+       "      <td>-0.827443</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.651803</td>\n",
+       "      <td>0.456480</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1650,30 +1650,30 @@
       ],
       "text/plain": [
        "       Age_SS  Sex  ChestPain  SystolicBP_SS   Chol_SS  Glucose  RestECG  \\\n",
-       "219 -0.707836    1          4      -0.243657  0.170897        1        0   \n",
-       "216  0.714498    0          2      -0.243657  0.308582        0        1   \n",
-       "259 -1.723789    1          3      -0.810948 -0.320835        0        1   \n",
-       "179  0.206522    1          4       0.890927  0.564283        0        0   \n",
-       "225  1.527260    1          4       0.607281 -1.441985        0        1   \n",
+       "219 -0.701898    1          4      -0.054575  0.192429        1        0   \n",
+       "216  0.879240    0          2      -0.054575  0.327129        0        1   \n",
+       "259 -1.831282    1          3      -0.628804 -0.288643        0        1   \n",
+       "179  0.314547    1          4       1.093882  0.577286        0        0   \n",
+       "225  1.782747    1          4       0.806768 -1.385486        0        1   \n",
        "..        ...  ...        ...            ...       ...      ...      ...   \n",
-       "44  -1.622194    1          2       0.323635  1.449402        0        0   \n",
-       "129  1.933642    0          1      -0.810948  0.426598        0        0   \n",
-       "272  1.222475    1          4      -0.810948 -0.202819        0        1   \n",
-       "9    0.206522    1          2       0.890927 -1.560001        0        1   \n",
-       "290  0.612903    1          4       0.777469 -0.871576        0        1   \n",
+       "44  -1.718344    1          2       0.519653  1.443214        0        0   \n",
+       "129  2.234500    0          1      -0.628804  0.442586        0        0   \n",
+       "272  1.443932    1          4      -0.628804 -0.173186        0        1   \n",
+       "9    0.314547    1          2       1.093882 -1.500943        0        1   \n",
+       "290  0.766301    1          4       0.979037 -0.827443        0        1   \n",
        "\n",
        "     STMaxRate_SS  STPain  STWave  NumColor  STSlope_1  STSlope_2  Defects_1  \\\n",
-       "219      0.229641       1       0         2          0          1          0   \n",
-       "216     -1.804411       0       1         1          1          0          0   \n",
-       "259      1.457748       1       4         0          1          0          0   \n",
-       "179     -1.228736       1       1         1          1          0          1   \n",
-       "225     -0.729818       1       3         0          0          0          0   \n",
+       "219     -0.048990       1       0         2          0          1          0   \n",
+       "216     -2.484434       0       1         1          1          0          0   \n",
+       "259      1.421467       1       4         0          1          0          0   \n",
+       "179     -1.795157       1       1         1          1          0          1   \n",
+       "225     -1.197784       1       3         0          0          0          0   \n",
        "..            ...     ...     ...       ...        ...        ...        ...   \n",
-       "44       1.457748       0       0         0          0          1          0   \n",
-       "129     -0.883331       1       0         1          0          1          0   \n",
-       "272     -2.802248       0       1         0          1          0          0   \n",
-       "9        1.150721       0       2         0          0          1          0   \n",
-       "290      0.651803       0       0         1          0          1          0   \n",
+       "44       1.421467       0       0         0          0          1          0   \n",
+       "129     -1.381591       1       0         1          0          1          0   \n",
+       "272     -3.679180       0       1         0          1          0          0   \n",
+       "9        1.053853       0       2         0          0          1          0   \n",
+       "290      0.456480       0       0         1          0          1          0   \n",
        "\n",
        "     Defects_2  Defects_3  \n",
        "219          0          1  \n",
@@ -1691,7 +1691,7 @@
        "[61 rows x 16 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,17 +1700,17 @@
     "### Reuse the scalers fitted on the training set for the testing set, so as not to leak any information back into training.\n",
     "\n",
     "Xs_test = X_test.drop(columns=['Age','STMaxRate','SystolicBP','Chol'])\n",
-    "Xs_test.insert(0, \"Age_SS\", SSA.fit_transform(X_test[['Age']]))\n",
-    "Xs_test.insert(5, \"STMaxRate_SS\", SSMR.fit_transform(X_test[['STMaxRate']]))\n",
-    "Xs_test.insert(3, \"SystolicBP_SS\", SSBP.fit_transform(X_test[['SystolicBP']]))\n",
-    "Xs_test.insert(4, \"Chol_SS\", SSC.fit_transform(X_test[['Chol']]))\n",
+    "Xs_test.insert(0, \"Age_SS\", SSA.transform(X_test[['Age']]))\n",
+    "Xs_test.insert(5, \"STMaxRate_SS\", SSMR.transform(X_test[['STMaxRate']]))\n",
+    "Xs_test.insert(3, \"SystolicBP_SS\", SSBP.transform(X_test[['SystolicBP']]))\n",
+    "Xs_test.insert(4, \"Chol_SS\", SSC.transform(X_test[['Chol']]))\n",
     "\n",
     "Xs_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1719,11 +1719,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\X_train.csv\"\n",
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\Xs_train.csv\"\n",
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\X_test.csv\"\n",
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\Xs_test.csv\"\n",
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\y_train.csv\"\n",
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\y_test.csv\"\n"
      ]
     }
