Project Final Report and Presentation

--- a/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
+++ b/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
@@ -284,7 +284,7 @@
     "* SystolicBP is continuous and shows little correlation to AngioTgt.  Standardize it after splitting.\n",
     "* Chol is continuous. Standardize after splitting test and train data sets.\n",
     "* Glucose is binary.  (1 = diabetes)\n",
-    "* RestECG has three values, but very few 2s. Replace 2 with 0 to make it trending and binary.\n"
+    "* RestECG has three values, but very few 2s. Replace 2 with 0 to make it trending.\n"
    ]
   },
   {
